# Coda_Lite

./: .coverage  .gitignore  .pre-commit-config.yaml  =0.30.0  =0.4.0  CHANGELOG.md  DIA_TTS_GPU_SETUP.md  DIA_TTS_USAGE.md  ELEVENLABS_TTS_USAGE.md  IMPLEMENTATION_NOTES.md  Makefile  README.md  commit_brand_new_context_tool_response.bat  commit_changes.bat  commit_final_json_leakage_fix.bat  commit_final_tool_response_fix.bat  commit_fix_json_leakage_final.bat  commit_fix_json_leakage_tool_response.bat  commit_fix_ollama_llm_chat_method.bat  commit_fix_system_prompt_tool_calling.bat  commit_fix_tool_calling_pipeline.bat  commit_improved_tool_calling.bat  commit_improved_tool_responses.bat  commit_memory.bat  commit_message.txt  commit_natural_language_tool_responses.bat  commit_optimization.bat  commit_personality.bat  commit_tool_calling.bat  commit_two_pass_tool_calling.bat  debug_memory.py  fix_github_and_commit.bat  fix_memory_system.py  git_sync.bat  list_voices.py  main.py  main_websocket.py  package-lock.json  package.json  push_to_remote.bat  (+16 more)
config/: __init__.py  config.yaml  config_loader.py  dia_tts_config.yaml  elevenlabs_tts_config.yaml  prompts.py  settings.py
dashboard-clean/: minimal-dashboard.html  minimal-test.html  minimal.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard-v2/: diagnostic.html  minimal.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard-v3/: README.md  package-lock.json  (+4 more)
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: lib.rs  main.rs
(+418 files in other folders)
